Tidy up JavaDoc and use more `List` in HttpBody
Add the version to since JavaDoc tags and document a parameter.
Use `List` for immutable lists.

Signed-off-by: thc202 <thc202@gmail.com>